# neuronet-ai-nodesystem-cognitiveshell-v0.3.0

./: .env  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-publish.yml.txt
cognitive_shell/: __init__.py  cognitveshell.py
